# VPN_app_backend

./: .env.example  README.md  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 3ec3581f6ed0_initial_migration.py  51b41360d2fe_update.py  eee0a78b65f9_migration.py
src/vpn_backend/: Dockerfile  main.py
src/vpn_backend/configs/: env.py
src/vpn_backend/models/: notification.py  payment.py  route_profile.py  route_rule.py  subscription.py  user.py  user_settings.py  vpn_key.py  vpn_session.py
src/vpn_backend/repositories/: base_repository.py  notification_repository.py  payment_repository.py  route_profile_repository.py  route_rule_repository.py  subscription_repository.py  user_repository.py  user_settings_repository.py  vpn_key_repository.py  vpn_session_repository.py
src/vpn_backend/routers/: notification_router.py  payment_router.py  route_profile_router.py  route_rule_router.py  subscription_router.py  user_router.py  user_settings_router.py  vpn_key_router.py  vpn_session_router.py
src/vpn_backend/schemas/: notification_schema.py  payment_schema.py  route_profile_schema.py  route_rule_schema.py  subscription_schema.py  user_schema.py  user_settings_schema.py  vpn_key_schema.py  vpn_session_schema.py
src/vpn_backend/services/: notification_service.py  payment_service.py  route_profile_service.py  route_rule_service.py  subscription_service.py  user_service.py  user_settings_service.py  vpn_key_service.py  vpn_session_service.py
src/vpn_backend/utils/: auth_handler.py  check_ownership.py
(+1 files in other folders)
